// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationInfoList renders with publicationInfo 1`] = `
<div
  className="__InlineList__"
>
  <span>
    Published in
    : 
  </span>
  <ul
    className="separate-items-with-semicolon"
  >
    <li
      key="Test Journal"
    >
      <PublicationInfo
        info={
          Immutable.Map {
            journal_title: "Test Journal",
          }
        }
      />
    </li>
  </ul>
</div>
`;

exports[`PublicationInfoList renders without label if labeled false 1`] = `
<div
  className="__InlineList__"
>
  <ul
    className="separate-items-with-semicolon"
  >
    <li
      key="Test Journal"
    >
      <PublicationInfo
        info={
          Immutable.Map {
            journal_title: "Test Journal",
          }
        }
      />
    </li>
  </ul>
</div>
`;
